// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useAppDispatch should dispatch a sync action 1`] = `
Array [
  Object {
    "payload": "foo",
    "type": "Foo",
  },
]
`;

exports[`useAppDispatch should dispatch an async action 1`] = `
Array [
  Object {
    "payload": "bar",
    "type": "Bar",
  },
]
`;
